<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/btn_timer"
                android:layout_width="45dp"
                android:layout_height="21dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:theme="@style/SwitchColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toEndOf="@+id/lb_timer_status"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lb_timer_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="216dp"
                android:layout_marginTop="40dp"
                android:text="@string/switch_timer_off"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_guess_country"
                android:layout_width="251dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="92dp"
                android:layout_marginEnd="8dp"
                android:onClick="openGuessCountry"
                android:text="@string/guess_the_country"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_guess_flag"
                android:layout_width="252dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:onClick="openGuessFlag"
                android:text="@string/guess_the_flag"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_guess_country" />

            <Button
                android:id="@+id/btn_guess_hints"
                android:layout_width="252dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:onClick="openGuessHints"
                android:text="@string/guess_hints"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_guess_flag" />

            <Button
                android:id="@+id/btn_adv_lvl"
                android:layout_width="252dp"
                android:layout_height="52dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="openAdvancedLevel"
                android:text="@string/advanced_level"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_guess_hints"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>